# opmark-egui

./: .gitignore  Cargo.toml  README.md
examples/: test.opmark
src/: app.rs  builder.rs  main.rs  parser.rs
src/app/: texture.rs
src/builder/: fs.rs
src/builder/templates/: Cargo.toml.temp  app_1.rs.temp  app_2.rs.temp  app_3.rs.temp  import.rs.temp  main.rs.temp  mod.rs
